Fix marker alignment issues induced by hanging punctuation
It appears hanging punctuation "reserves" ~1ch of space on the left side
of `message` elements, pushing `::before` further to the left than
intended.

--- a/_view-medium.scss
+++ b/_view-medium.scss
@@ -5,7 +5,7 @@
     grid-template-columns: auto;
     align-items: start;
     justify-content: space-between;
-    column-gap: 1.5rem;
+    column-gap: var(--column-gap);
     @include constrained-column-width();
   }
 
@@ -34,7 +34,12 @@
     text-align: right;
   }
 
+  .message::before {
+    left: 0.5ch;
+  }
+
   .sender {
+    padding-left: $side-pad;
     text-align: left;
   }
 
@@ -51,7 +56,7 @@
     overflow: visible;
 
     &::before {
-      @include columnar-mark($mark-symbol);
+      @include columnar-mark($mark-symbol, 0);
     }
   }
 
